se consulta la lista de usuarios y se crea una tabla de muestra con selección

--- a/config/config.json
+++ b/config/config.json
@@ -13,6 +13,7 @@
   },
   "externals": {},
   "localizedResources": {
-    "GestorDeAusenciasWebPartStrings": "lib/webparts/gestorDeAusencias/loc/{locale}.js"
+    "GestorDeAusenciasWebPartStrings": "lib/webparts/gestorDeAusencias/loc/{locale}.js",
+    "ControlStrings": "node_modules/@pnp/spfx-controls-react/lib/loc/{locale}.js"
   }
 }
