--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@microsoft/sp-webpart-base": "1.14.0",
     "@pnp/graph": "^3.3.1",
     "@pnp/sp": "^3.3.1",
+    "@pnp/spfx-controls-react": "^3.8.0",
     "office-ui-fabric-react": "7.174.1",
     "react": "16.13.1",
     "react-dom": "16.13.1"
