--- a/package.json
+++ b/package.json
@@ -7,20 +7,21 @@
     "start": "gulp serve",
     "build": "gulp bundle",
     "clean": "gulp clean",
-    "test": "gulp test"
+    "test": "gulp test",
+    "setssl": "gulp trust-dev-cert"
   },
   "dependencies": {
-    "@fluentui/react": "^8.68.2",
-    "@microsoft/rush-stack-compiler-4.2": "^0.1.2",
+    "@fluentui/react": "8.68.2",
+    "@microsoft/rush-stack-compiler-4.2": "0.1.2",
     "@microsoft/sp-core-library": "1.14.0",
     "@microsoft/sp-lodash-subset": "1.14.0",
     "@microsoft/sp-office-ui-fabric-core": "1.14.0",
     "@microsoft/sp-property-pane": "1.14.0",
     "@microsoft/sp-webpart-base": "1.14.0",
-    "@pnp/sp": "^3.3.2",
-    "@pnp/spfx-controls-react": "^3.8.0",
+    "@pnp/sp": "3.3.2",
+    "@pnp/spfx-controls-react": "3.8.0",
     "office-ui-fabric-react": "7.174.1",
-    "ol": "^6.14.1",
+    "ol": "6.14.1",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   },
