--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@fluentui/react": "8.68.2",
+    "@microsoft/loader-load-themed-styles": "^1.9.123",
     "@microsoft/rush-stack-compiler-4.2": "0.1.2",
     "@microsoft/sp-core-library": "1.14.0",
     "@microsoft/sp-lodash-subset": "1.14.0",
