--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@fluentui/react": "8.68.2",
-    "@microsoft/loader-load-themed-styles": "^1.9.123",
+    "@microsoft/loader-load-themed-styles": "1.9.123",
     "@microsoft/rush-stack-compiler-4.2": "0.1.2",
     "@microsoft/sp-core-library": "1.14.0",
     "@microsoft/sp-lodash-subset": "1.14.0",
@@ -33,8 +33,8 @@
     "@microsoft/sp-tslint-rules": "1.14.0",
     "@microsoft/sp-module-interfaces": "1.14.0",
     "@microsoft/rush-stack-compiler-3.9": "0.4.47",
-    "gulp": "~4.0.2",
-    "ajv": "~5.2.2",
+    "gulp": "4.0.2",
+    "ajv": "5.2.2",
     "@types/webpack-env": "1.13.1"
   }
 }
