se agrega al versionamiento el compilado de la solución y el mismo manejara versiones de aquí en adelante

--- a/.gitignore
+++ b/.gitignore
@@ -10,9 +10,10 @@ package-lock.json
 dist
 lib
 release
-solution
+debug
+
 temp
-*.sppkg
+
 
 # Coverage directory used by tools like istanbul
 coverage
